# img-in

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: AddUnitTest.cmake  FetchGtest.cmake
img-in/: CMakeLists.txt  Image.cpp  Image.hpp
img-in/detail/: CMakeLists.txt
img-in/detail/if/: IConfigFactory.hpp  IFilesystem.hpp  IImage.hpp
img-in/detail/inc/: ConfigFactory.hpp  FilesystemWrapper.hpp
img-in/detail/src/: ConfigFactory.cpp  FilesystemWrapper.cpp
img-in/inc/: Image.hpp
img-in/inc/interfaces/: IImage.hpp
img-in/src/: Image.cpp
tests/: CMakeLists.txt  TestImage.cpp
tests/mocks/: ConfigFactoryMock.hpp  FilesystemMock.hpp
